--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@ code {
     monospace;
 }
 
+/* .nav-link {
+  color: white !important;
+} */
+
 #carousel {
   max-height: 500px;
 }
+
+/* .carousalImg {
+  object-fit: contain !important;
+} */
